# apriltags-cpp

./: CMakeLists.txt  README.md
apriltags/: TODO.md
calib3d/: CMakeLists.txt  README.md
calib3d/config/: VID5_images_location.xml  in_VID5_example_camera.xml  in_VID5_example_images.xml  in_VID5_example_video.xml
calib3d/src/: CMakeLists.txt  camera_calibration.cpp
snapshot/: README.md  snap.py
src/: camtest.cpp
